crates/formatter/tests/snapshots/snapshots__synapse__main__delta__34__push_display_name_rename.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

delete from push_rules
where rule_id = 'global/override/.m.rule.contains_display_name';
update push_rules
set rule_id = 'global/override/.m.rule.contains_display_name'
where rule_id = 'global/underride/.m.rule.contains_display_name';

delete from push_rules_enable
where rule_id = 'global/override/.m.rule.contains_display_name';
update push_rules_enable
set rule_id = 'global/override/.m.rule.contains_display_name'
where rule_id = 'global/underride/.m.rule.contains_display_name';
